# cpp-logger

./: .clang-format  CMakeLists.txt  README.md
examples/: basic_usage.cpp
include/logger/: logger.hpp
tests/: logger_test.cpp
